fix: mac readability, compress font a bit, skip roll calculation on < 5 star rarity relics

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -356,3 +356,7 @@ a {
   visibility: visible !important;
   transition: opacity 0.3s ease;
 }
+.ant-card-small > .ant-card-body {
+  padding-left: 11px !important;
+  padding-right: 11px !important;
+}
